--- a/_pages/certificates.html
+++ b/_pages/certificates.html
@@ -7,5 +7,5 @@ author_profile: true
 
 
 {% for post in site.certificates reversed %}
-  {% include archive-single-talk.html %}
+  {% include archive-single.html %}
 {% endfor %}
