--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -1,6 +1,6 @@
-<!-- ---
+---
 layout: archive
-title: "Talks and presentations"
+title: "Certificates"
 permalink: /talks/
 author_profile: true
 ---
@@ -8,4 +8,4 @@ author_profile: true
 
 {% for post in site.talks reversed %}
   {% include archive-single-talk.html %}
-{% endfor %} -->
+{% endfor %}
